--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.5",
     "@tailwindcss/vite": "^4.0.15",
+    "chart.js": "^4.4.8",
     "framer-motion": "^12.6.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-swipeable": "^7.0.2",
