--- a/package.json
+++ b/package.json
@@ -13,20 +13,25 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.5",
     "@tailwindcss/vite": "^4.0.15",
+    "@tanstack/react-query": "^5.72.1",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.6.0",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.4.0",
     "react-swipeable": "^7.0.2",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
